<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    android:background="@color/bg_color_orange_islander" >

    <com.mysentosa.android.sg.custom_views.AspectRatioImageView
        android:id="@+id/im_main_icon"
        android:layout_width="@dimen/islander_icon_size"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/islander_icon_margin_top_welcome"
        android:src="@drawable/sentosa_islander_logo" />

    <TextView
        android:id="@+id/tv_title_islander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/im_main_icon"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/islander_detail_margin_top_welcome"
        android:text="@string/islander_title"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tv_link_islander"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_islander"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/regular_margin"
        android:gravity="center"
        android:text="@string/islander_title_link"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_very_large" />

    <Button
        android:id="@+id/bt_login_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginLeft="@dimen/regular_margin"
        android:layout_marginRight="@dimen/regular_margin"
        android:background="@drawable/selector_standard_button"
        android:text="@string/islander_login_now"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

</RelativeLayout>