<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <include layout="@layout/title_layout" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/less_large_margin"
        android:layout_marginTop="@dimen/less_large_margin"
        android:text="@string/islander_email"
        android:textSize="@dimen/text_size_regular"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/less_large_margin"
        android:layout_marginRight="@dimen/less_large_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:background="@drawable/bg_edit_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/small_margin"
        android:singleLine="true"
        android:textSize="@dimen/text_size_regular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/less_large_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:text="@string/islander_mobile"
        android:textSize="@dimen/text_size_regular"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/less_large_margin"
        android:layout_marginRight="@dimen/less_large_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:background="@drawable/bg_edit_text"
        android:inputType="phone"
        android:padding="@dimen/small_margin"
        android:singleLine="true"
        android:textSize="@dimen/text_size_regular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/less_large_margin"
        android:layout_marginTop="@dimen/regular_margin"
        android:text="@string/islander_address"
        android:textSize="@dimen/text_size_regular"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/islander_edittext_height"
        android:layout_marginLeft="@dimen/less_large_margin"
        android:layout_marginRight="@dimen/less_large_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:background="@drawable/bg_edit_text"
        android:lines="3"
        android:gravity="top|left"
        android:padding="@dimen/small_margin"
        android:singleLine="true"
        android:textSize="@dimen/text_size_regular" >
    </EditText>

</LinearLayout>